--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;900&display=swap');
+
+
   </style>
   <link rel="stylesheet" href="index.css"></link>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -38,12 +40,12 @@
 <body>
 
 <div class="bg-lightGray flex w-full h-screen">
-  <main class="w-7/12 h-fit flex flex-col m-auto bg-white rounded-2xl md:w-3/12">
+  <main class="w-7/12 h-fit flex flex-col m-auto bg-white rounded-2xl md:w-80 md:h-auto">
     <section class="m-4 rounded-2xl md:h-7/12">
       <img src="./images/image-qr-code.png" alt="QR code" class="w-full rounded-2xl" />
     </section>
     <section class="px-10 pb-10 pt-8 font-outfit space-y-2 m-auto text-center md:px-8 md:pb-6 md:pt-4">
-      <h1 class="text-darkBlue font-bold text-2xl"><b>Improve your front-end skills by building projects</b></h1>
+      <h1 class="text-darkBlue font-bold text-xl"><b>Improve your front-end skills by building projects</b></h1>
       <p class="text-grayishBlue">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </section>
   </main>
